--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,7 @@ protobuf==3.4.0
 ptyprocess==0.5.2
 pycurl==7.43.0
 Pygments==2.2.0
-pygobject==3.20.0
+#pygobject==3.20.0
 pyparsing==2.0.3
 python-apt==1.1.0b1
 python-dateutil==2.4.2
