--- a/requirements.txt
+++ b/requirements.txt
@@ -48,7 +48,7 @@ pycurl==7.43.0
 Pygments==2.2.0
 #pygobject==3.20.0
 pyparsing==2.0.3
-python-apt==1.1.0b1
+#python-apt==1.1.0b1
 python-dateutil==2.4.2
 python-editor==1.0.3
 python-oauth2==1.0.1
