--- a/requirements.txt
+++ b/requirements.txt
@@ -63,7 +63,7 @@ simplegeneric==0.8.1
 simplejson==3.8.1
 six==1.11.0
 SQLAlchemy==1.1.14
-tables==3.2.2
+#tables==3.2.2
 tensorflow==1.3.0
 tensorflow-tensorboard==0.1.8
 terminado==0.6
