--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+numpy
 alembic==0.9.6
 beautifulsoup4==4.4.1
 bleach==1.5.0
@@ -33,7 +34,7 @@ nbformat==4.4.0
 nose==1.3.7
 notebook==5.2.0
 numexpr==2.4.3
-numpy==1.13.3
+#numpy==1.13.3
 pamela==0.3.0
 pandas==0.17.1
 pandocfilters==1.4.2
