--- a/requirements.txt
+++ b/requirements.txt
@@ -58,8 +58,8 @@ PyYAML==3.12
 pyzmq==16.0.2
 qtconsole==4.3.1
 requests==2.18.4
-scikit-learn==0.17
-scipy==0.17.0
+#scikit-learn==0.17
+#scipy==0.17.0
 simplegeneric==0.8.1
 simplejson==3.8.1
 six==1.11.0
