--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,7 @@ Pillow==3.1.2
 prompt-toolkit==1.0.15
 protobuf==3.4.0
 ptyprocess==0.5.2
-pycurl==7.43.0
+#pycurl==7.43.0
 Pygments==2.2.0
 #pygobject==3.20.0
 pyparsing==2.0.3
@@ -56,7 +56,7 @@ python-oauth2==1.0.1
 pytz==2014.10
 PyYAML==3.12
 pyzmq==16.0.2
-qtconsole==4.3.1
+#qtconsole==4.3.1
 requests==2.18.4
 #scikit-learn==0.17
 #scipy==0.17.0
@@ -69,7 +69,7 @@ tensorflow==1.3.0
 tensorflow-tensorboard==0.1.8
 terminado==0.6
 testpath==0.3.1
-tornado==4.5.2
+#tornado==4.5.2
 traitlets==4.3.2
 #ufw==0.35
 #unattended-upgrades==0.1
