--- a/manifest.yml
+++ b/manifest.yml
@@ -4,9 +4,9 @@ applications:
 - name: jupyter
   memory: 512M
   instances: 1
-  buildpack: https://github.com/pl31/heroku-buildpack-conda.git
+  buildpack:
   random-route: true
   command: ~/start_jupyter
   services:
   # enforce a postgres database
-  - jupyter-db
+#  - jupyter-db
