--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 #pgcontents
-git+git@github.com:quantopian/pgcontents.git
+-e git@github.com:quantopian/pgcontents.git
 nbextensions
 numpy
 alembic==0.9.6
