--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 #pgcontents
--e git+git@github.com:quantopian/pgcontents.git#egg=pgcontents
+git+https://github.com/quantopian/pgcontents.git#egg=pgcontents
 nbextensions
 numpy
 alembic==0.9.6
