--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ mistune==0.7.4
 nbconvert==5.3.1
 nbformat==4.4.0
 nose==1.3.7
-notebook==5.2.0
+notebook
 numexpr==2.4.3
 #numpy==1.13.3
 pamela==0.3.0
